samples/_failures_safe/1761318335_f5fe2f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f431a310.c: In function ‘main’:
./samples/SAFE/__tmp_f431a310.c:142:5: error: expected declaration or statement at end of input
  142 |     }
      |     ^
